# grpc-cross-arm

./: .gitignore  Dockerfile  README.md  arm.toolchain.cmake  docker-bake.hcl
.github/workflows/: test.yml
src/: CMakeLists.txt  hello.proto  hello_client.cc  hello_server.cc
